--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="menu3" class="menu-item" style="display: none;">
                 <h2>Victoria Pavillion</h2>
                 <img src="760802.jpg">
-                <p>Today the Victoria Paviliion is known on stampede grounds at the Agriculture Building. Built in after the first world war in 1919 the Victoria Pavilion serves as a cattle pavilion and curling rink, and is the oldest building on the grounds. It’s architecture is of a utilitarian style, though both it and the adjacent Administration building are now covered with a metal facade. (Source:avenuecalgary)
+                <p>Today the Victoria Paviliion is known on stampede grounds at the Agriculture Building. Built in after the first world war in 1919 the Victoria Pavilion serves as a cattle pavilion and curling rink, and is the oldest building on the grounds. It’s architecture is of a utilitarian style, though both it and the adjacent Administration building are now covered with a metal facade. (Source:avenuecalgary) </p>
                 <img src="img.jpg">
             </div>
 
